# django-surface-theme

./: .bowerrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  bower.json  manage.py  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  publish_test.yml  test.yml  test.yml_placeholder
testapp/: requirements.txt
testapp/appone/: admin.py  models.py  tests.py
testapp/appone/migrations/: 0001_initial.py  0002_car_doors.py
testapp/testapp/: settings.py  urls.py
theme/: __init__.py  apps.py  filters.py  forms.py  urls.py  utils.py  views.py  widgets.py
theme/static/admin/js/: jquery.init.js
theme/static/assets/css/: atlantis.css  error-codes.css  surface.css
theme/templates/: 404.html  500.html  feedback.html
theme/templates/accounts/: logged_out.html  login.html
theme/templates/admin/: actions.html  base.html  base_site.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  object_history.html  pagination.html  related_field_ajax_list_filter.html  search_form.html  submit_line.html
theme/templates/daterangefilter/: daterangefilter.html
theme/templates/django_object_actions/: change_list.html
theme/templates/includes/: breadcrumbs.html  footer.html  navigation.html  scripts.html  sidenav.html  styles.html
theme/templates/rangefilter/: date_filter.html
theme/templates/widgets/: datepicker.html  datetimepicker.html
theme/templatetags/: surface_theme.py
(+21 files in other folders)
