[metadata]
name = django-surface-theme
version = attr: theme.__version__
description = Open-source Surface template with improved functionality
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-surface-theme
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Environment :: Web Environment
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = theme

[coverage:report]
show_missing = True
skip_covered = True

[aliases]
install_all = install_bower install

[egg_info]
tag_build = 
tag_date = 0
